[bug] navbar no longer covers endmatch button

--- a/client/src/components/MyMatchPage/MyMatch.css
+++ b/client/src/components/MyMatchPage/MyMatch.css
@@ -81,7 +81,7 @@
 
 .endMatch {
   overflow: hidden;
-  z-index: 5;
+  z-index: 4;
   position: fixed;
   top:62px;
   right: 7px;
